# ReSTIR_GI

./: .gitignore  Automation_myGI.sln  Automation_myGI.slnx  README.md  myGI.sln  myGI.slnx  myGI.uproject
RTXDI-main/: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  LICENSE.txt  README.md  ThirdPartyLicenses.txt  imgui.ini
RTXDI-main/Doc/: Confidence.md  DebugUtilities.md  Integration.md  NoiseAndBias.md  RestirGI.md  RestirPT.md  RtxdiApplicationBridge.md  ShaderAPI.md
RTXDI-main/Samples/FullSample/Shaders/: AccumulationPass.hlsl  CMakeLists.txt  CompositingPass.hlsl  GBufferHelpers.hlsli  GlassPass.hlsl  HelperFunctions.hlsli  LightShaping.hlsli  PolymorphicLight.hlsli  PostprocessGBuffer.hlsl  PrepareLights.hlsl  PreprocessEnvironmentMap.hlsl  RasterizedGBuffer.hlsl  RaytracedGBuffer.hlsl  RenderEnvironmentMap.hlsl  SceneGeometry.hlsli  Shaders.cfg
RTXDI-main/Samples/FullSample/Shaders/DenoisingPasses/: ComputeGradients.hlsl  ConfidencePass.hlsl  FilterGradientsPass.hlsl
RTXDI-main/Samples/FullSample/Shaders/LightingPasses/: BrdfRayTracing.hlsl  ShadeSecondarySurfaces.hlsl  ShadingHelpers.hlsli
RTXDI-main/Samples/FullSample/Shaders/LightingPasses/DI/: FusedResampling.hlsl  GenerateInitialSamples.hlsl  ShadeSamples.hlsl  SpatialResampling.hlsl  TemporalResampling.hlsl
RTXDI-main/Samples/FullSample/Shaders/LightingPasses/GI/: FinalShading.hlsl  FusedResampling.hlsl  SpatialResampling.hlsl  TemporalResampling.hlsl
RTXDI-main/Samples/FullSample/Shaders/LightingPasses/PT/: ComputeDuplicationMap.hlsl  FillSampleID.hlsl  FinalShading.hlsl  GenerateInitialSamples.hlsl  PSRUtils.hlsli  SpatialResampling.hlsl  TemporalResampling.hlsl
RTXDI-main/Samples/FullSample/Shaders/LightingPasses/Presampling/: PresampleEnvironmentMap.hlsl  PresampleLights.hlsl  PresampleReGIR.hlsl
RTXDI-main/Samples/FullSample/Shaders/LightingPasses/RtxdiApplicationBridge/: RAB_Buffers.hlsli  RAB_LightInfo.hlsli  RAB_LightSample.hlsli  RAB_LightSampling.hlsli  RAB_MISCallbacks.hlsli  RAB_Material.hlsli  RAB_RTShaders.hlsli  RAB_RayPayload.hlsli  RAB_SpatialHelpers.hlsli  RAB_Surface.hlsli  RAB_VisibilityTest.hlsli  RtxdiApplicationBridge.hlsli
RTXDI-main/Samples/FullSample/Shaders/ShaderDebug/: VisualizeConfidence.hlsl  VisualizeHdrSignals.hlsl
RTXDI-main/Samples/FullSample/Shaders/ShaderDebug/PTPathViz/: PTPathVizLines_ps.hlsl  PTPathVizLines_vs.hlsl  PTPathVizPreprocess_cs.hlsl  PTPathVizRecording.hlsli
RTXDI-main/Samples/FullSample/Shaders/ShaderDebug/PackedDataVizPasses/: DuplicationMapViz.hlsl  NDirOctUNorm32Viz.hlsl  PackedR11G11B10UFloatViz.hlsl  PackedR8G8B8A8GammaUFloatViz.hlsl  SampleIDViz.hlsl
RTXDI-main/Samples/FullSample/Shaders/ShaderDebug/ReservoirSubfieldVizPasses/: DIReservoirViz.hlsl  GIReservoirViz.hlsl  PTReservoirViz.hlsl  ReservoirVizUtils.hlsli
RTXDI-main/Samples/FullSample/Shaders/ShaderDebug/ShaderDebugPrint/: RuntimeShaderDebugPrintUtilities.hlsli  ShaderDebugPrint.hlsli
RTXDI-main/Samples/FullSample/Shaders/SharedShaderInclude/SharedShaderInclude/: BRDFPTParameters.h  DirectLightingMode.h  NvapiIntegration.h  PTParameters.h  ShaderParameters.h
RTXDI-main/Samples/FullSample/Source/: CMakeLists.txt  Profiler.cpp  Profiler.h  ProfilerSections.h  RenderTargets.cpp  RenderTargets.h  RtxdiResources.cpp  RtxdiResources.h  UserInterface.cpp  UserInterface.h  main.cpp
RTXDI-main/Samples/FullSample/Source/App/: CommandLineArgs.cpp  CommandLineArgs.h  LoggingCallback.cpp  LoggingCallback.h  SceneRenderer.cpp  SceneRenderer.h  Screenshot.cpp  Screenshot.h
RTXDI-main/Samples/FullSample/Source/RenderPasses/: AccumulationPass.cpp  AccumulationPass.h  CompositingPass.cpp  CompositingPass.h  GBufferPass.cpp  GBufferPass.h  GenerateMipsPass.cpp  GenerateMipsPass.h  GlassPass.cpp  GlassPass.h  PrepareLightsPass.cpp  PrepareLightsPass.h  RayTracingPass.cpp  RayTracingPass.h  RenderEnvironmentMapPass.cpp  RenderEnvironmentMapPass.h
RTXDI-main/Samples/FullSample/Source/RenderPasses/DenoisingPasses/: ConfidencePass.cpp  ConfidencePass.h  FilterGradientsPass.cpp  FilterGradientsPass.h  NrdIntegration.cpp  NrdIntegration.h  NrdIntegrationDebugSettings.h
RTXDI-main/Samples/FullSample/Source/RenderPasses/LightingPasses/: LightingPasses.cpp  LightingPasses.h  ReSTIRDIRenderPasses.cpp  ReSTIRDIRenderPasses.h  ReSTIRGIRenderPasses.cpp  ReSTIRGIRenderPasses.h  ReSTIRPTRenderPasses.cpp  ReSTIRPTRenderPasses.h
RTXDI-main/Samples/FullSample/Source/Scene/: Lights.cpp  Lights.h  SampleMesh.h  SampleScene.cpp  SampleScene.h
RTXDI-main/Samples/FullSample/Source/ShaderDebug/: DebugVizPasses.cpp  DebugVizPasses.h  PackedDataVizPass.cpp  PackedDataVizPass.h  ShaderPrint.cpp  ShaderPrint.h  VisualizationPass.cpp  VisualizationPass.h
RTXDI-main/Samples/FullSample/Source/ShaderDebug/PTPathViz/: PTPathVizLinesPass.cpp  PTPathVizLinesPass.h  (+4 more)
RTXDI-main/Samples/MinimalSample/Shaders/: CMakeLists.txt  GBufferHelpers.hlsli  HelperFunctions.hlsli  PrepareLights.hlsl  PrimaryRays.hlsli  Render.hlsl  SceneGeometry.hlsli  ShaderParameters.h  TriangleLight.hlsli
RTXDI-main/Samples/MinimalSample/Shaders/RtxdiApplicationBridge/: RAB_Buffers.hlsli  RAB_LightInfo.hlsli  RAB_LightSample.hlsli  RAB_LightSampling.hlsli  RAB_Material.hlsli  RAB_SpatialHelpers.hlsli  RAB_Surface.hlsli  RAB_VisibilityTest.hlsli  RtxdiApplicationBridge.hlsli
RTXDI-main/Samples/MinimalSample/Source/: CMakeLists.txt  PrepareLightsPass.cpp  PrepareLightsPass.h  RenderPass.cpp  RenderPass.h  RtxdiResources.cpp  RtxdiResources.h  SampleScene.cpp  SampleScene.h  UserInterface.cpp  UserInterface.h  main.cpp
RTXDI-main/Support/Tests/FullSampleStructAlignmentTests/: CMakeLists.txt
RTXDI-main/Support/Tests/FullSampleStructAlignmentTests/Source/: AlignmentTests.cpp
RTXDI-main/Support/Tests/RtxdiRuntimeShaderTests/: CMakeLists.txt
RTXDI-main/Support/Tests/RtxdiRuntimeShaderTests/Shaders/: ResamplingCompileTest.glsl  ResamplingCompileTest.hlsl
RTXDI-main/Support/Tests/RtxdiRuntimeStructAlignmentTests/: CMakeLists.txt
RTXDI-main/Support/Tests/RtxdiRuntimeStructAlignmentTests/Source/: AlignmentTests.cpp
(+74 files in other folders)
